# mnd_game_solver

./: .gitignore  Cargo.toml  README.md  clippy.toml  questions.json
src/: main.rs  player.rs  question.rs
