[package]
name = "fantoccini_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
fantoccini = "0.21.2"
image = "0.25.2"
log = "0.4.22"
ocrs = "0.8.1"
reqwest = { version = "0.12.7", features = ["blocking"] }
rten = "0.13.1"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
