[package]
name = "fantoccini_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
fantoccini = { version="0.21.2", features = []}
image = "0.25.2"
log = "0.4.22"
ocrs = "0.8.1"
reqwest = { version = "0.12.7", features = ["blocking"] }
rten = "0.13.1"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }


[lints.clippy]
style="warn"
pedantic="warn"
restriction="warn"
single_call_fn="allow"